--- a/coffeeshop_backend/requirements.txt
+++ b/coffeeshop_backend/requirements.txt
@@ -7,3 +7,7 @@ pillow==11.3.0
 PyJWT==2.10.1
 sqlparse==0.5.3
 tzdata==2025.2
+gunicorn>=20.1.0
+whitenoise>=6.0.0
+dj-database-url>=2.0.0
+psycopg2-binary>=2.9.0
