--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ dist/
 downloads/
 eggs/
 .eggs/
-# lib/
-# lib64/
+lib/
+lib64/
 parts/
 sdist/
 var/
@@ -23,6 +23,7 @@ var/
 .installed.cfg
 *.egg
 .pytest_cache/
+!coffeeshop_frontend/src/lib/
 .coverage
 htmlcov/
 
