--- a/coffeeshop_backend/.env.example
+++ b/coffeeshop_backend/.env.example
@@ -1,5 +1,10 @@
 SECRET_KEY=your-secret-key-here
 DEBUG=False
-ALLOWED_HOSTS=your-render-app.onrender.com,localhost,127.0.0.1
+ALLOWED_HOSTS=localhost,127.0.0.1,your-domain.com
 DATABASE_URL=postgresql://user:password@host:port/dbname
 FRONTEND_URL=https://your-vercel-app.vercel.app
+
+# Cloudinary settings (for persistent media storage)
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
