--- a/coffeeshop_backend/requirements.txt
+++ b/coffeeshop_backend/requirements.txt
@@ -9,3 +9,5 @@ psycopg2-binary>=2.9.0
 python-dotenv>=1.0.0
 dj-database-url>=2.1.0
 Pillow>=10.0.0
+cloudinary>=1.36.0
+django-cloudinary-storage>=0.3.0
